fixed sort order for glucose levels

--- a/MySelf.WebClient/Web.Release.config
+++ b/MySelf.WebClient/Web.Release.config
@@ -8,12 +8,12 @@
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an atrribute "name" that has a value of "MyDB".
     -->
-    <connectionStrings>
-      <add name="DiabDbContext" 
-        connectionString="Data Source=localhost;Initial Catalog=DiabDb;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  
+  <connectionStrings>
+    <add name="DiabDbContext"
+      connectionString="Data Source=localhost;Initial Catalog=DiabDb;Integrated Security=True"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
@@ -28,4 +28,9 @@
       </customErrors>
     -->
   </system.web>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule" xdt:Transform="Insert"/> 
+    </modules>
+  </system.webServer>
 </configuration>
