--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -746,6 +746,7 @@
     <Content Include="Views\Diary\Index.cshtml" />
     <Content Include="Views\Diary\Month.cshtml" />
     <Content Include="Views\Diary\Day.cshtml" />
+    <Content Include="Views\Home\Index.mobile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
