--- a/MySelf.WebClient/packages.config
+++ b/MySelf.WebClient/packages.config
@@ -40,6 +40,7 @@
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Moment.js" version="2.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="toastr" version="1.3.1" targetFramework="net45" />
