fixed the filter by day and week in the new friendcontroller; addes some css rules to format friend view; added a config value to simplify webdeploy and facebook login;

--- a/MySelf.WebClient/Web.Release.config
+++ b/MySelf.WebClient/Web.Release.config
@@ -13,6 +13,9 @@
       connectionString="Data Source=localhost;Initial Catalog=DiabDb;Integrated Security=True"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
+  <appSettings>
+    <add key="FacebookClient" value="262309163906980;3439950f4bf262d8041e28cdb1b7416c" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
 
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
@@ -28,9 +31,9 @@
       </customErrors>
     -->
   </system.web>
-  <system.webServer>
+  <!--<system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="WebDAVModule" xdt:Transform="Insert"/> 
     </modules>
-  </system.webServer>
+  </system.webServer>-->
 </configuration>
