--- a/MySelf.WebClient/Web.config
+++ b/MySelf.WebClient/Web.config
@@ -13,7 +13,8 @@
       <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
       <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
     </sectionGroup>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MySelf.WebClient-20130730085259;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MySelf.WebClient-20130730085259.mdf" providerName="System.Data.SqlClient" />-->
     <add name="DiabDbContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=DiabDb;AttachDBFilename=|DataDirectory|\DiabDb.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
@@ -25,6 +26,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="test" value="test" />
+    <add key="FacebookClient" value="170633953128198;2a94e68adc55ff563a8c4ff178a85662" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
