--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ TestResults
 *.suo
 *.user
 *.sln.docstates
+*.mdf
+*.ldf
 
 # Build results
 [Dd]ebug/
@@ -106,3 +108,4 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+*.mdf
