wip remove static controller and friendapp

--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -247,6 +247,7 @@
     <Content Include="app\js\services\myselflog.resource.js" />
     <Content Include="app\js\services\user.datacontext.js" />
     <Content Include="app\js\services\user.resource.js" />
+    <Content Include="app\views\diary.view.html" />
     <Content Include="app\views\profile.view.html" />
     <Content Include="app\views\profiles.view.html" />
     <Content Include="Content\bootstrap\bootstrap-theme.css" />
