--- a/MySelf.WebClient/Web.Debug.config
+++ b/MySelf.WebClient/Web.Debug.config
@@ -30,9 +30,9 @@
       </customErrors>
     -->
   </system.web>
-  <system.webServer>
+  <!--<system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="WebDAVModule" xdt:Transform="Insert"/>
     </modules>
-  </system.webServer>
+  </system.webServer>-->
 </configuration>
