--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -256,11 +256,15 @@
     <Content Include="Content\bootstrap\bootstrap.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\images\ajax-loader.gif" />
+    <Content Include="Content\images\bg1.png" />
+    <Content Include="Content\images\bg2.png" />
     <Content Include="Content\images\headerbackground.png" />
     <Content Include="Content\images\icons-18-black.png" />
     <Content Include="Content\images\icons-18-white.png" />
     <Content Include="Content\images\icons-36-black.png" />
     <Content Include="Content\images\icons-36-white.png" />
+    <Content Include="Content\images\mobileUI-site-nav-opener-bg.svg" />
+    <Content Include="Content\images\sprites.png" />
     <Content Include="Content\jquery.mobile-1.3.2.css" />
     <Content Include="Content\jquery.mobile-1.3.2.min.css" />
     <Content Include="Content\jquery.mobile.structure-1.3.2.css" />
@@ -272,6 +276,13 @@
     <Content Include="Content\myStyleold.css" />
     <Content Include="Content\ngi.css" />
     <Content Include="Content\Site.Mobile.css" />
+    <Content Include="Content\skel-noscript.css" />
+    <Content Include="Content\style-desktop.css" />
+    <Content Include="Content\style-mobile.css" />
+    <Content Include="Content\style-narrow.css" />
+    <Content Include="Content\style-narrower.css" />
+    <Content Include="Content\style-wide.css" />
+    <Content Include="Content\style.css" />
     <Content Include="Content\themes\base\images\animated-overlay.gif" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -343,9 +354,11 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\toastr.less" />
     <Content Include="app\js\controllers\newfriend.controller.js" />
+    <Content Include="app\views\log.view.html" />
     <None Include="Properties\PublishProfiles\Copy and paste.pubxml" />
     <None Include="Properties\PublishProfiles\webdeploy.pubxml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
+    <Content Include="Index.html" />
     <Content Include="js\app.js" />
     <Content Include="js\controllers\EditEventController.js" />
     <Content Include="js\controllers\EditProfileController.js" />
@@ -393,6 +406,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\toastr.min.js.map" />
+    <Content Include="Scripts\config.js" />
     <Content Include="Scripts\dateTimePicker.js" />
     <Content Include="Scripts\i18n\angular-locale_af-na.js" />
     <Content Include="Scripts\i18n\angular-locale_af-za.js" />
@@ -705,6 +719,8 @@
     <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\morris-0.4.3.min.js" />
     <Content Include="Scripts\raphael-min.js" />
+    <Content Include="Scripts\skel-panels.min.js" />
+    <Content Include="Scripts\skel.min.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="Web.config" />
@@ -755,6 +771,7 @@
     <Content Include="Views\Home\Index.Maobile.cshtml" />
     <Content Include="Views\Diary\Day.Maobile.cshtml" />
     <Content Include="Views\Shared\_NewLayout.cshtml" />
+    <Content Include="Views\Home\Index2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
