--- a/MySelf.WebClient/Web.config
+++ b/MySelf.WebClient/Web.config
@@ -32,7 +32,7 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/" timeout="2880" />
     </authentication>
 
     <membership defaultProvider="simple">
