refactoring... fixed the diary auth bug, connstring transf and others

--- a/MySelf.WebClient/Web.Debug.config
+++ b/MySelf.WebClient/Web.Debug.config
@@ -14,6 +14,9 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="DiabDbContext" connectionString="Server=localhost;Database=DiabDb;Trusted_Connection=True;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+  </connectionStrings>
   <appSettings>
     <add key="FacebookClient" value="262309163906980;3439950f4bf262d8041e28cdb1b7416c" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
