--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -256,8 +256,12 @@
     <Content Include="Content\bootstrap\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap\bootstrap.css" />
     <Content Include="Content\bootstrap\bootstrap.min.css" />
+    <Content Include="Content\font\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\ie8.css" />
+    <Content Include="Content\ie9.css" />
     <Content Include="Content\images\ajax-loader.gif" />
+    <Content Include="Content\images\avatar.jpg" />
     <Content Include="Content\images\bg1.png" />
     <Content Include="Content\images\bg2.png" />
     <Content Include="Content\images\headerbackground.png" />
@@ -265,8 +269,19 @@
     <Content Include="Content\images\icons-18-white.png" />
     <Content Include="Content\images\icons-36-black.png" />
     <Content Include="Content\images\icons-36-white.png" />
+    <Content Include="Content\images\ie9\button.svg" />
     <Content Include="Content\images\mobileUI-site-nav-opener-bg.svg" />
+    <Content Include="Content\images\overlay.png" />
+    <Content Include="Content\images\pic01.jpg" />
+    <Content Include="Content\images\pic02.jpg" />
+    <Content Include="Content\images\pic03.jpg" />
+    <Content Include="Content\images\pic04.jpg" />
+    <Content Include="Content\images\pic05.jpg" />
+    <Content Include="Content\images\pic06.jpg" />
+    <Content Include="Content\images\pic07.jpg" />
+    <Content Include="Content\images\pic08.jpg" />
     <Content Include="Content\images\sprites.png" />
+    <Content Include="Content\images\toggle.svg" />
     <Content Include="Content\jquery.mobile-1.3.2.css" />
     <Content Include="Content\jquery.mobile-1.3.2.min.css" />
     <Content Include="Content\jquery.mobile.structure-1.3.2.css" />
@@ -279,10 +294,10 @@
     <Content Include="Content\ngi.css" />
     <Content Include="Content\Site.Mobile.css" />
     <Content Include="Content\skel-noscript.css" />
-    <Content Include="Content\style-desktop.css" />
     <Content Include="Content\style-mobile.css" />
     <Content Include="Content\style-narrow.css" />
     <Content Include="Content\style-narrower.css" />
+    <Content Include="Content\style-normal.css" />
     <Content Include="Content\style-wide.css" />
     <Content Include="Content\style.css" />
     <Content Include="Content\themes\base\images\animated-overlay.gif" />
@@ -357,10 +372,14 @@
     <Content Include="Content\toastr.less" />
     <Content Include="app\js\controllers\newfriend.controller.js" />
     <Content Include="app\views\log.view.html" />
+    <Content Include="Content\font\fontawesome-webfont.eot" />
+    <Content Include="Content\font\fontawesome-webfont.ttf" />
+    <Content Include="Content\font\fontawesome-webfont.woff" />
+    <Content Include="Content\font\FontAwesome.otf" />
     <None Include="Properties\PublishProfiles\Copy and paste.pubxml" />
     <None Include="Properties\PublishProfiles\webdeploy.pubxml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
-    <Content Include="Index.html" />
+    <Content Include="index.html" />
     <Content Include="js\app.js" />
     <Content Include="js\controllers\EditEventController.js" />
     <Content Include="js\controllers\EditProfileController.js" />
@@ -408,8 +427,8 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\toastr.min.js.map" />
-    <Content Include="Scripts\config.js" />
     <Content Include="Scripts\dateTimePicker.js" />
+    <Content Include="Scripts\html5shiv.js" />
     <Content Include="Scripts\i18n\angular-locale_af-na.js" />
     <Content Include="Scripts\i18n\angular-locale_af-za.js" />
     <Content Include="Scripts\i18n\angular-locale_af.js" />
@@ -697,6 +716,7 @@
     <Content Include="Scripts\i18n\angular-locale_zh.js" />
     <Content Include="Scripts\i18n\angular-locale_zu-za.js" />
     <Content Include="Scripts\i18n\angular-locale_zu.js" />
+    <Content Include="Scripts\init.js" />
     <Content Include="Scripts\jquery-2.0.3.js" />
     <Content Include="Scripts\jquery-2.0.3.min.js" />
     <Content Include="Scripts\jquery-2.0.3.min.map" />
