--- a/MySelf.WebClient/packages.config
+++ b/MySelf.WebClient/packages.config
@@ -42,6 +42,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Moment.js" version="2.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="ng-grid" version="2.0.7" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="toastr" version="1.3.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net45" />
