fixed the problem with delete log

--- a/MySelf.WebClient/Web.Debug.config
+++ b/MySelf.WebClient/Web.Debug.config
@@ -33,9 +33,14 @@
       </customErrors>
     -->
   </system.web>
-  <!--<system.webServer>
-    <modules runAllManagedModulesForAllRequests="true">
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" xdt:Transform="Insert">
       <remove name="WebDAVModule" xdt:Transform="Insert"/>
     </modules>
-  </system.webServer>-->
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" xdt:Transform="Insert"/>
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
 </configuration>
