--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -237,12 +237,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\js\ajaxlogin.js" />
+    <Content Include="app\js\controllers\modalInstance.controller.js" />
     <Content Include="app\js\controllers\profile.controller.js" />
     <Content Include="app\js\controllers\profiles.controller.js" />
     <Content Include="app\js\controllers\friend.controller.js" />
     <Content Include="app\js\controllers\login.controller.js" />
     <Content Include="app\js\friend.main.js" />
     <Content Include="app\js\myselflog.main.js" />
+    <Content Include="app\js\services\alertService.js" />
     <Content Include="app\js\services\authentication.js" />
     <Content Include="app\js\services\friend.datacontext.js" />
     <Content Include="app\js\services\logger.js" />
@@ -752,6 +754,10 @@
     <Content Include="Scripts\skel.min.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
+    <Content Include="Scripts\ui-bootstrap-0.6.0.js" />
+    <Content Include="Scripts\ui-bootstrap-0.6.0.min.js" />
+    <Content Include="Scripts\ui-bootstrap-tpls-0.6.0.js" />
+    <Content Include="Scripts\ui-bootstrap-tpls-0.6.0.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
