--- a/MySelf.WebClient/packages.config
+++ b/MySelf.WebClient/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="0.6.0" targetFramework="net45" />
   <package id="angularjs" version="1.0.7" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="Autofac" version="3.1.1" targetFramework="net45" />
