--- a/MySelf.WebClientTest/packages.config
+++ b/MySelf.WebClientTest/packages.config
@@ -30,6 +30,7 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Moment.js" version="2.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="ng-grid" version="2.0.7" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
