--- a/MySelf.WebClient/Web.config
+++ b/MySelf.WebClient/Web.config
@@ -139,6 +139,11 @@
 			     be allowed in shared hosting environments. -->
       <!--<servicePointManager checkCertificateRevocationList="true"/>-->
     </settings>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="friendinvite@myselflog.com">
+        <network defaultCredentials="true" host="localhost" port="25" userName="test@test.net" password="123456"/>
+      </smtp>
+    </mailSettings>
   </system.net>
   <dotNetOpenAuth>
     <messaging>
