implemented send invite feature (the mail template is left in this first iteration)

--- a/MySelf.WebClient/Web.Debug.config
+++ b/MySelf.WebClient/Web.Debug.config
@@ -43,4 +43,11 @@
       </customHeaders>
     </httpProtocol>
   </system.webServer>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="invite@myselflog.com" xdt:Transform="Replace">
+        <network defaultCredentials="true" host="localhost" port="25" userName="test@test.net" password="123456" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
