--- a/MySelf.WebClient/Web.config
+++ b/MySelf.WebClient/Web.config
@@ -140,8 +140,8 @@
       <!--<servicePointManager checkCertificateRevocationList="true"/>-->
     </settings>
     <mailSettings>
-      <smtp deliveryMethod="Network" from="friendinvite@myselflog.com">
-        <network defaultCredentials="true" host="localhost" port="25" userName="test@test.net" password="123456"/>
+      <smtp deliveryMethod="SpecifiedPickupDirectory" from="no-reply@mydomain.com">
+        <specifiedPickupDirectory pickupDirectoryLocation="C:\temp\Mail" />
       </smtp>
     </mailSettings>
   </system.net>
