--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Models\LogProfileDto.cs" />
     <Compile Include="Models\Mapper.cs" />
     <Compile Include="Models\RootDto.cs" />
+    <Compile Include="Models\TerapyDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -265,6 +266,8 @@
     <Content Include="app\views\diary.view.html" />
     <Content Include="app\views\profile.view.html" />
     <Content Include="app\views\profiles.view.html" />
+    <Content Include="templates\valuePanel.html" />
+    <Content Include="templates\terapyPanel.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
