--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Code\IConfigSettings.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AccountController2.cs" />
+    <Compile Include="Controllers\api\TerapyController.cs" />
     <Compile Include="Controllers\api\FriendInviteController.cs" />
     <Compile Include="Controllers\api\FriendWithLinkController.cs" />
     <Compile Include="Controllers\api\SecurityLinkController.cs" />
@@ -251,6 +252,7 @@
     <Content Include="app\js\myselflog.main.js" />
     <Content Include="app\js\services\alertService.js" />
     <Content Include="app\js\services\authentication.js" />
+    <Content Include="app\js\services\terapy.resource.js" />
     <Content Include="app\js\services\friendInvite.resource.js" />
     <Content Include="app\js\services\friendwithlink.resource.js" />
     <Content Include="app\js\services\friendwithlink.datacontext.js" />
