--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -215,7 +215,6 @@
     <Compile Include="Code\ConfigSettings.cs" />
     <Compile Include="Code\IConfigSettings.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\AccountController2.cs" />
     <Compile Include="Controllers\api\TerapyController.cs" />
     <Compile Include="Controllers\api\FriendInviteController.cs" />
     <Compile Include="Controllers\api\FriendWithLinkController.cs" />
@@ -270,6 +269,7 @@
     <Content Include="app\views\diary.view.html" />
     <Content Include="app\views\profile.view.html" />
     <Content Include="app\views\profiles.view.html" />
+    <Content Include="App_Data\howtorecreatesqllocaldb.txt" />
     <Content Include="Content\jquery.jqplot.min.css" />
     <Content Include="Scripts\jplotplugins\jqplot.barRenderer.js" />
     <Content Include="Scripts\jplotplugins\jqplot.barRenderer.min.js" />
@@ -884,7 +884,6 @@
     <Content Include="Views\Shared\_UserSettings.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="App_LocalResources\" />
   </ItemGroup>
   <ItemGroup>
