--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -270,6 +270,7 @@
     <Content Include="app\js\services\myselflog.resource.js" />
     <Content Include="app\js\services\user.datacontext.js" />
     <Content Include="app\js\services\user.resource.js" />
+    <Content Include="app\js\services\values.service.js" />
     <Content Include="app\views\diary2.view.html" />
     <Content Include="app\views\diary.view.html" />
     <Content Include="app\views\profile.view.html" />
