--- a/MySelf.WebClient/MySelf.WebClient.csproj
+++ b/MySelf.WebClient/MySelf.WebClient.csproj
@@ -257,6 +257,8 @@
     <Content Include="app\js\myselflog.main.js" />
     <Content Include="app\js\services\alertService.js" />
     <Content Include="app\js\services\authentication.js" />
+    <Content Include="app\js\services\ng-csv.js" />
+    <Content Include="app\js\services\ng-csv.min.js" />
     <Content Include="app\js\services\terapy.resource.js" />
     <Content Include="app\js\services\friendInvite.resource.js" />
     <Content Include="app\js\services\friendwithlink.resource.js" />
