--- a/MySelf.WebClient/Web.Debug.config
+++ b/MySelf.WebClient/Web.Debug.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
   <connectionStrings>
-    <add name="DiabDbContext" connectionString="Server=localhost;Database=DiabDb;Trusted_Connection=True;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="DiabDbContext" connectionString="Data Source=h7d0wo76ck.database.windows.net,1433;Persist Security Info=True;User ID=riccardone@h7d0wo76ck;Pooling=False" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
   <appSettings>
     <add key="FacebookClient" value="262309163906980;3439950f4bf262d8041e28cdb1b7416c" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
