--- a/MySelf.WebClient/Web.config
+++ b/MySelf.WebClient/Web.config
@@ -17,7 +17,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DiabDbContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=DiabDb;AttachDBFilename=|DataDirectory|\DiabDb.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="DiabDbContext" connectionString="Data Source=h7d0wo76ck.database.windows.net;Initial Catalog=myselflog_db;Persist Security Info=True;User ID=riccardone@h7d0wo76ck;Password=Gnaffo70" providerName="System.Data.SqlClient" />
+    <!--<add name="DiabDbContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=DiabDb;AttachDBFilename=|DataDirectory|\DiabDb.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
